--- a/distributions/example/manifest.yaml
+++ b/distributions/example/manifest.yaml
@@ -33,3 +33,7 @@ receivers:
   - gomod: go.opentelemetry.io/collector/receiver/otlpreceiver v0.100.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/filelogreceiver v0.100.0
   - gomod: github.com/open-telemetry/opentelemetry-collector-contrib/receiver/hostmetricsreceiver v0.100.0
+  - gomod: github.com/andrzej-stencel/opentelemetry-collector-components/receiver/dummyreceiver v0.100.0
+
+replaces:
+  - github.com/andrzej-stencel/opentelemetry-collector-components/receiver/dummyreceiver => ../receiver/dummyreceiver
